reduction front to use a simple agent funciton

--- a/static/index.html
+++ b/static/index.html
@@ -116,7 +116,7 @@
         <div class="loading" id="loading-msg">Thinking...</div>
         
         <div class="input-group">
-            <input type="text" id="user-input-food" placeholder="Enter ingredients you have..." onkeypress="handleKeyPress(event)">
+            <input type="text" id="user-input" placeholder="Enter ingredients you have..." onkeypress="handleKeyPress(event)">
             <button onclick="sendMessage()" id="submit-btn">Send</button>
         </div>
     </div>
