config to aws eb deployment

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Influencer Agent</title>
+    <title>Social Influencer Agent (eb)</title>
     <style>
         /* CSS - Making it look nice */
         body {
