set up container to aws eb

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Influencer Agent (eb)</title>
+    <title>Social Influencer Assistant Agent</title>
     <style>
         /* CSS - Making it look nice */
         body {
@@ -110,7 +110,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🚀 Content Assistant Multi-Agent</h1>        
+        <h1> Social Influencer Assistant Agent</h1>        
         <div id="chat-area"></div>
         
         <div class="loading" id="loading-msg">Thinking...</div>
