--- a/static/index.html
+++ b/static/index.html
@@ -199,6 +199,8 @@
             } catch (error) {
                 console.error("Error:", error);
                 addMessage("Error: Something went wrong. Please try again.", 'assistant');
+                addMessage(error.message, 'assistant');
+
             } finally {
                 // Re-enable input
                 submitBtn.disabled = false;
