--- a/static/index.html
+++ b/static/index.html
@@ -274,7 +274,10 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Influencer Agent</h1>
+            <h1>
+                Social Influencer Multi-Agent Assistant
+                <span style="font-size: 0.5em; color: gray;">v1.0</span>
+            </h1>
             <button onclick="openGraphDiagram()" id="graph-btn">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
